css/main.css
body {
  font-family: 'Arial', 'Roboto', Helvetica, sans-serif;
  background-color: #dcffe6;
  margin: 0;
  padding: 0;
  line-height: 1.4;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
  color: #008147;
}

.container {
  max-width: 992px;
  margin: 0 auto;
  padding: 0 1rem;
}

img {
  width: 100%;
  border-radius: 10px;
}

.main-nav ul {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  padding: 0;
}

.main-nav ul li {
  flex: 1;
  text-align: center;
}

.main-nav ul li a {
  display: block;
  color: #ffffff;
  text-decoration: none;
  font-size: 1.25rem;
  background-color: #008147;
  padding: 1rem;
  border-radius: 5px;
}

.main-nav ul li a:hover,.main-nav ul li a:focus {
  background-color: #5dffa2;
  color: #000000;
}

p{
  max-width: 75ch;
  word-spacing: 2px;
}

.address_heading{
  margin-left: 2rem;
  margin-bottom: 0;
}

.address{
  margin-top: 0;
  margin-left: 2rem;
}

form{
  border: 1px solid rgb(125, 125, 125);
  border-radius: 5px;
  padding: 1rem;
  background-color: #ffffff;
}

form input,
form textarea {
  display: block;
  width: 100%;
  margin-bottom: 1rem;
  padding: .5rem 1rem;
  box-sizing: border-box;
}

form input::placeholder, form textarea::placeholder{
  font-family: initial;
  font-weight: lighter;
}

form textarea {
  min-height: 150px;
  max-height: 150px;
  height: 150px;
  resize: none;
}

form button {
  background: none;
  border: 2px solid #00a05a;
  padding: 1rem;
  color: #00a05a;
  text-transform: uppercase;
  font-weight: bold;
  cursor: pointer;
  border-radius: 5px;
}

form input:focus,
form textarea:focus {
  border: 1px solid #00a05a;
}
form button:hover, form button:focus {
  background: #00a05a;
  border: 2px solid #00a05a;
  padding: 1rem;
  color: #fff;
  text-transform: uppercase;
}

.site-footer {
  padding: 2rem 0;
}

@media screen and (min-width: 992px){
  form{
    width: 50%;
    padding: 2rem;
  }
}

